--- a/style.css
+++ b/style.css
@@ -68,18 +68,18 @@
 
 }
 .card-body {
-  background-color:black;
+  background-color:white;
   border-radius: 10px;
 }
 .card-text {
-   color: white;
+   color:#333333;
   text-align: center;
   font-weight: bold;
   font-size: 20px;
 }
 
 .card-title {
-  color: white;
+  color:#333333;
   text-align: center;
 }
 /* Animation properties */
